--- a/mkdocs_inspircd/templates/module.md.j2
+++ b/mkdocs_inspircd/templates/module.md.j2
@@ -43,7 +43,7 @@ To load this module use the following `<module>` tag:
 <td markdown="1">{{attr.name}}</td>
 <td markdown="1">{{attr.type}}</td>
 <td markdown="1">{% if attr.default == "None" %}<em>None</em>{% else %}{{attr.default}}{% endif %}</td>
-<td markdown="1">{% if attr.required %}<strong>Required</strong> {% endif %}{{attr.description}}</td>
+<td markdown="1">{% if attr.required %}<strong>Required!</strong> {% endif %}{{attr.description}}</td>
 </tr>
 {% endfor %}
 </tbody>
@@ -72,6 +72,7 @@ To load this module use the following `<module>` tag:
 
 {% if tag.details -%}
 {{tag.details}}
+
 {% endif -%}
 
 ##### Example Usage
