--- a/mkdocs_inspircd/templates/module.md.j2
+++ b/mkdocs_inspircd/templates/module.md.j2
@@ -146,7 +146,7 @@ This module requires no other configuration.
 <th>Character</th>
 <th>Type</th>
 <th>Parameter Syntax</th>
-<th>Usable by</th>
+<th>Usable By</th>
 <th>Description</th>
 </tr>
 </thead>
