Remove hack used to support multiple configs in the same paragraph.

--- a/mkdocs_inspircd/templates/module.md.j2
+++ b/mkdocs_inspircd/templates/module.md.j2
@@ -30,7 +30,11 @@ To load this module use the following `<module>` tag:
 
 {% if configuration -%}
 {% for tag in configuration -%}
+{% if tag.name is string %}
 #### `{{tag.name}}`
+{% else %}
+#### `{{tag.name|join('` &amp; `')}}`
+{% endif %}
 
 {{tag.description}}
 
