For each core config tag, add a table of fields added by modules.

--- a/mkdocs_inspircd/templates/module.md.j2
+++ b/mkdocs_inspircd/templates/module.md.j2
@@ -61,7 +61,7 @@ To load this module use the following `<module>` tag:
 </table>
 {% endif %}
 
-{% if tag.extends %}
+{% if tag.added_values %}
 {# typically to extend `<class:privs>` #}
 <table markdown="1">
 <thead>
